rhacm/mco/init.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: open-cluster-management-observability
  labels:
    openshift.io/cluster-monitoring: "true"
